# ucluster

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_exact.py  test_fuzzy.py  test_fuzzy_real.py  test_preprocess.py
ucluster/: text_cluster.py
