[project]
name = "ucluster"
version = "1.0.0"
description = "Text-based clustering utility"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "R. Miles McCain", email = "github@sendmiles.email" }]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "nltk>=3.9.4",
    "scikit-learn>=1.9",
    "sentence-transformers>=5.6",
    "visidata>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ucluster"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: tests that download or run the real sentence-transformer model",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
